--- a/MiaB.ipynb
+++ b/MiaB.ipynb
@@ -1,33 +1,19 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "yUZTrgBrTf0J"
+      },
+      "outputs": [],
       "source": [
         "import pickle\n",
         "import numpy as np\n",
         "import math\n",
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd"
-      ],
-      "metadata": {
-        "id": "yUZTrgBrTf0J"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -45,19 +31,24 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "DMYjXxxRmSj6"
+      },
+      "outputs": [],
       "source": [
         "!wget http://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
         "!mkdir /content/cifar10\n",
         "!tar -xvf  '/content/cifar-10-python.tar.gz' -C '/content/cifar10'"
-      ],
-      "metadata": {
-        "id": "DMYjXxxRmSj6"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "l5DbhM90Tcf9"
+      },
+      "outputs": [],
       "source": [
         "data_batches = []\n",
         "dir = \"/content/cifar10/cifar-10-batches-py/\"\n",
@@ -67,83 +58,83 @@
         "  data_batches[i-1][b'labels'] = np.reshape(data_batches[i-1][b'labels'],(len(data_batches[i-1][b'labels']),1))\n",
         "test_batch = unpickle(dir+\"test_batch\")\n",
         "meta_info = unpickle(dir+\"batches.meta\")"
-      ],
-      "metadata": {
-        "id": "l5DbhM90Tcf9"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "batch_keys = list(data_batches[0].keys())\n",
-        "print(batch_keys)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "h8gZfeoxiBNR"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "batch_keys = list(data_batches[0].keys())\n",
+        "print(batch_keys)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(data_batches[0][b'data'])"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Lkq62GbRpTpo"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print(data_batches[0][b'data'])"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(np.max(data_batches[0][b'labels']))"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "u6nuC7VXpkri"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print(np.max(data_batches[0][b'labels']))"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(data_batches[0][b'data'].shape)\n",
-        "print(data_batches[0][b'labels'].shape)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "UZ0M5KyQ_fZa"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print(data_batches[0][b'data'].shape)\n",
+        "print(data_batches[0][b'labels'].shape)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(data_batches)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "uSRuSXbZp0YH"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print(data_batches)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(meta_info)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "75nvzn3WC7Fq"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print(meta_info)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "wGLwV8Nk8TkP"
+      },
+      "outputs": [],
       "source": [
         "def logistic(x): return np.ones(x.shape) / (np.exp(-x)+1)\n",
         "\n",
@@ -193,15 +184,15 @@
         "        if true == pred: correct += 1\n",
         "        else: false += 1\n",
         "    return correct / (false + correct)"
-      ],
-      "metadata": {
-        "id": "wGLwV8Nk8TkP"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "vci9KwvLlKu0"
+      },
+      "outputs": [],
       "source": [
         "class GradientDescent:\n",
         "    def __init__(self, learning_rate=.001, max_iters=1e4, epsilon=1e-8, momentum=0, batch_size=None):\n",
@@ -299,21 +290,23 @@
         "    def gradient(x, y, params):\n",
         "        yh = x\n",
         "        steps = []\n",
-        "        dropout_layers = []\n",
         "        for w in params:\n",
         "            not_dropped = (np.random.randn(yh.shape) > self.dropout_p) * 1.0\n",
-        "            dropout_layers.append(not_dropped)\n",
-        "            if w != params[-1]: yh = self.activation(np.dot(yh, w*not_dropped))\n",
-        "            else: yh = np.dot(yh, w*not_dropped)\n",
-        "            steps.append(yh)\n",
+        "            steps.append(np.dot(yh*not_dropped, w))\n",
+        "            if w != params[-1]:\n",
+        "                yh = self.activation(np.dot(yh*not_dropped, w))\n",
+        "                steps.append(yh)\n",
+        "            else:\n",
+        "                yh = np.dot(yh*not_dropped, w)\n",
         "        yh = self.nonlinearity(yh)\n",
-        "        gradient = self.loss_gradient(y, yh) #NxC\n",
-        "        gradient = np.dot(gradient, self.nonlinearity_gradient(gradient))\n",
+        "        steps.append(yh)\n",
+        "        gradient = self.loss_gradient(y, steps.pop(-1)) #NxC\n",
+        "        gradient = np.dot(gradient, self.nonlinearity_gradient(steps.pop(-1)))\n",
         "        #backpropagation\n",
         "        gradients = [gradient]\n",
         "        for w in params(::-1):\n",
         "            #only add activation gradient if not on the last weights (last weights go straight to softmax)\n",
-        "            if w != params[-1]: dw = self.activation_gradient()\n",
+        "            if w != params[-1]: dw = self.activation_gradient(steps.pop(-1))\n",
         "            else: dw = w\n",
         "            gradient = np.dot(gradient, dw)\n",
         "            gradients = list([gradient]).extend(gradients)\n",
@@ -329,12 +322,21 @@
         "            if w != params[-1]: yh = self.activation(np.dot(yh, w))\n",
         "            else: yh = np.dot(yh, w)\n",
         "        return self.nonlinearity(yh)"
-      ],
-      "metadata": {
-        "id": "vci9KwvLlKu0"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
